fix background not covering all text in the map sidebar

--- a/sass/map.sass
+++ b/sass/map.sass
@@ -79,8 +79,6 @@ p
   font-size: 12pt
   font-family: 'Roboto Condensed', sans-serif
   margin-bottom: 12pt
-  i
-    font-style: italic
 
 .sidebar, .map-point, .map-point-battle
   p 
@@ -164,7 +162,6 @@ a
   height: 550px
   margin: 20px auto
   z-index: 999
-  background: transparentize($color-background, 0.15)
   text-align: left
   .sidebar-nav
     position: absolute
@@ -182,6 +179,8 @@ a
     opacity: 0
   .flex--active
     opacity: 1
+    width: 100%
+    background: transparentize($color-background, 0.15)
     
     
 
